# gate-weimar-group-1

./: .gitignore  .gitmodules  README.md  Untitled-1.json  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: backend.yml  frontend.yml  node.js.yml
backend/: README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml
backend/api/: main.py
backend/drafts/pipeline-backend/: Dockerfile  README.md
backend/drafts/pipeline-backend-lite/: Dockerfile  README.md  docker-compose.yml  logger.py  main.py  requirements.txt  worker.py
backend/drafts/pipeline-backend/src/api/: deps.py
backend/drafts/pipeline-backend/src/api/v1/endpoints/: flow.py  output.py  test_errors.py  validate.py
backend/drafts/pipeline-backend/src/core/: config.py
backend/drafts/pipeline-backend/src/models/database/: base.py  flow.py  output.py  user.py
backend/drafts/pipeline-backend/src/schemas/: error.py  execution.py  flow.py  output.py  transformation.py
backend/drafts/pipeline-backend/src/services/: execution_manager_quix.py  health_service.py
backend/drafts/pipeline-backend/src/utils/: logger.py
backend/drafts/template/: consumer.py  producer.py
backend/prototype/api/: Dockerfile  main.py  requirements.txt
backend/prototype/manager/: Dockerfile  requirements.txt
backend/prototype/manager/app/: main.py
backend/prototype/manager/app/api/: pipelines.py
backend/prototype/manager/app/pipelines/: lifecycle.py  models.py  registry.py
backend/prototype/manager/app/ws/: manager.py
backend/prototype/producer/: Dockerfile
backend/prototype/producer/app/: producer.py
backend/prototype/shared/events/: __init__.py  emit.py  models.py
backend/prototype/shared/logger/: __init__.py
backend/prototype/worker/: requirements.txt
backend/prototype/worker/app/: worker.py
backend/worker/: producer.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/mkp-template-vue/: package.json
frontend/prototype/: Dockerfile  (+7 more)
gate_weimar/: consumer.py  producer.py
pipeline-backend/: .env.example  README.md  docker-compose.yml  pyproject.toml  swagger_output.json  test_pipeline.sh
pipeline-backend/alembic/: alembic.ini  env.py
pipeline-backend/alembic/versions/: 454ce252085a_schema_to_schemas.py  8de2ff128b55_create_all_tables.py
pipeline-backend/src/: main.py
pipeline-backend/src/api/v1/: router.py
pipeline-backend/src/api/v1/endpoints/: health.py  input.py  pipeline.py  tag.py  transformation.py
pipeline-backend/src/core/: database.py  error_handlers.py  exceptions.py
pipeline-backend/src/models/database/: __init__.py  input.py  pipeline.py  tag.py  transformation.py
pipeline-backend/src/schemas/: health.py  input.py  pipeline.py  tag.py  user.py
pipeline-backend/src/services/: execution_manager_quix.py  validation_service.py
(+33 files in other folders)
